# Kinddit

./: .env.example  .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_GATES.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  TRADEMARK.md  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/c/[slug]/: page.tsx
app/p/[id]/: page.tsx
app/tickets/: page.tsx
app/u/[username]/: page.tsx
apps/: README.md
apps/api/: .env.dev  Dockerfile  __init__.py  alembic.ini  dependencies.py  main.py  pyproject.toml  requirements.txt  schemas.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202309210001_initial.py
apps/api/db/: __init__.py  env.py  models.py
apps/api/kinddit/: __init__.py  db.py  settings.py
apps/api/kinddit/plugins/: __init__.py  interface.py  loader.py
apps/api/routers/: __init__.py  blocks.py  comments.py  communities.py  consent_relay.py  me.py  posts.py  reports.py  tickets.py  users.py
apps/api/tests/: test_health.py
apps/frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
components/: AutoModSettings.tsx  BlockAction.tsx  CommentTree.tsx  Navbar.tsx  PostCard.tsx  RightSidebar.tsx  Sidebar.tsx  TicketCard.tsx
components/theme/: ThemeProvider.tsx  ThemeToggle.tsx
docs/: conflict-resolution.md
infra/: README.md
infra/docker/: api.Dockerfile  compose.yml  seed.sql  web.Dockerfile
lib/: blockUtils.ts  supabaseClient.ts  ticketUtils.ts
tests/: README.md
(+37 files in other folders)
