[tool.poetry]
name = "kinddit-api"
version = "0.1.0"
description = "Kinddit FastAPI service"
authors = ["Kinddit Contributors <oss@kinddit.com>"]
[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = "^2.3"
uvicorn = { extras = ["standard"], version = "^0.23" }
sqlalchemy = "^2.0"
alembic = "^1.12"
psycopg = {version = "^3.1", extras = ["binary"]}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
httpx = "^0.25"

[tool.poetry.scripts]
kinddit-api = "apps.api.main:app"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
